--- a/index.html
+++ b/index.html
@@ -397,11 +397,79 @@
             <use href="./images/sprite.svg#icon-close-icon"></use>
           </svg>
         </button>
+        <form class="modal-form">
+          <p class="modal-form-capture">Залиште свої дані, ми вам передзвонимо</p>
+          <label class="modal-form-field">
+            <span class="modal-form-input-desc">Імʼя</span>
+            <span class="modal-form-input-wrapper">
+              <input
+                type="text"
+                class="modal-form-input"
+                required
+                pattern="[a-zA-Zа-яА-ЯіІїЇʼҐґєЄ]+"
+                name="user_name"
+              />
+
+              <svg class="modal-form-icon" width="18" height="18">
+                <use href="./images/sprite.svg#icon-personblack"></use>
+              </svg>
+            </span>
+          </label>
+          <label class="modal-form-field">
+            <span class="modal-form-input-desc">Телефон</span>
+
+            <span class="modal-form-input-wrapper">
+              <input
+                type="tel"
+                class="modal-form-input"
+                pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+                required
+                name="user_phone"
+              />
+              <svg class="modal-form-icon" width="13" height="13">
+                <use href="./images/sprite.svg#icon-phoneblack"></use>
+              </svg>
+            </span>
+          </label>
+
+          <label class="modal-form-field">
+            <span class="modal-form-input-desc">Пошта</span>
+
+            <span class="modal-form-input-wrapper">
+              <input type="email" class="modal-form-input" required name="user_email" />
+
+              <svg class="modal-form-icon" width="15" height="12">
+                <use href="./images/sprite.svg#icon-emailblack"></use>
+              </svg>
+            </span>
+          </label>
+
+          <label class="modal-form-field">
+            <span class="modal-form-input-desc">Коментар</span>
+            <textarea
+              name="user_message"
+              class="modal-form-message"
+              placeholder="Введіть текст"
+            ></textarea>
+          </label>
+          <label class="modal-form-checkbox-wrapper">
+            <input
+              type="checkbox"
+              class="modal-form-checkbox visually-hidden"
+              name="user_comment"
+            />
+
+            <svg class="modal-form-own-checkbox" width="16" height="16">
+              <use class="modal-form-own-checkbox-icon" href="./images/sprite.svg#icon-iconcheck"></use>
+            </svg>
+
+            Погоджуюся з розсилкою та приймаю&nbsp;
+            <a href=""> Умови договору</a>
+          </label>
+          <button type="submit" class="modal-form-submit">Відправити</button>
+        </form>
       </div>
     </div>
-
     <script src="./js/modal.js"></script>
   </body>
 </html>
-
-
