--- a/index.html
+++ b/index.html
@@ -386,6 +386,24 @@
             </li>
           </ul>
         </div>
+        <div class="subscribe">
+          <p class="label">Підпишіться на розсилку</p>
+          <form class="subscribe-form">
+            <input
+              type="email"
+              class="subscribe-form-input"
+              required
+              name="user_email"
+              placeholder="E-mail"
+            />
+            <button type="submit" class="subscribe-form-submit">
+              Підписатися
+              <svg class="subscribe-form-icon" width="24" height="24">
+                <use href="./images/sprite.svg#icon-iconsend"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
 
@@ -460,9 +478,11 @@
             />
 
             <svg class="modal-form-own-checkbox" width="16" height="16">
-              <use class="modal-form-own-checkbox-icon" href="./images/sprite.svg#icon-iconcheck"></use>
+              <use
+                class="modal-form-own-checkbox-icon"
+                href="./images/sprite.svg#icon-iconcheck"
+              ></use>
             </svg>
-
             Погоджуюся з розсилкою та приймаю&nbsp;
             <a href=""> Умови договору</a>
           </label>
