--- a/index.html
+++ b/index.html
@@ -387,15 +387,17 @@
           </ul>
         </div>
         <div class="subscribe">
-          <p class="label">Підпишіться на розсилку</p>
           <form class="subscribe-form">
-            <input
-              type="email"
-              class="subscribe-form-input"
-              required
-              name="user_email"
-              placeholder="E-mail"
-            />
+            <label class="subscribe-form-wrapper">
+              <p class="label">Підпишіться на розсилку</p>
+              <input
+                type="email"
+                class="subscribe-form-input"
+                required
+                name="user_email"
+                placeholder="E-mail"
+              />
+            </label>
             <button type="submit" class="subscribe-form-submit">
               Підписатися
               <svg class="subscribe-form-icon" width="24" height="24">
