--- a/portfolio.html
+++ b/portfolio.html
@@ -273,23 +273,26 @@
           </ul>
         </div>
         <div class="subscribe">
-          <p class="label">Підпишіться на розсилку</p>
-          <form class="subscribe-form">
-            <input
-              type="email"
-              class="subscribe-form-input"
-              required
-              name="user_email"
-              placeholder="E-mail"
-            />
-            <button type="submit" class="subscribe-form-submit">
-              Підписатися
-              <svg class="subscribe-form-icon" width="24" height="24">
-                <use href="./images/sprite.svg#icon-iconsend"></use>
-              </svg>
-            </button>
-          </form>
-        </div>
+          <div class="subscribe">
+            <form class="subscribe-form">
+              <label class="subscribe-form-wrapper">
+                <p class="label">Підпишіться на розсилку</p>
+                <input
+                  type="email"
+                  class="subscribe-form-input"
+                  required
+                  name="user_email"
+                  placeholder="E-mail"
+                />
+              </label>
+              <button type="submit" class="subscribe-form-submit">
+                Підписатися
+                <svg class="subscribe-form-icon" width="24" height="24">
+                  <use href="./images/sprite.svg#icon-iconsend"></use>
+                </svg>
+              </button>
+            </form>
+          </div>
       </div>
     </footer>
   </body>
