Додана мова у плейсхолдер

--- a/index.html
+++ b/index.html
@@ -396,6 +396,7 @@
                 required
                 name="user_email"
                 placeholder="E-mail"
+                lang="en"
               />
             </label>
             <button type="submit" class="subscribe-form-submit">
