--- a/portfolio.html
+++ b/portfolio.html
@@ -282,7 +282,8 @@
                   class="subscribe-form-input"
                   required
                   name="user_email"
-                  placeholder="E-mail"
+                  placeholder="E-mail" 
+                  lang="en"
                 />
               </label>
               <button type="submit" class="subscribe-form-submit">
