--- a/index.html
+++ b/index.html
@@ -387,18 +387,17 @@
           </ul>
         </div>
         <div class="subscribe">
+          <p class="label">Підпишіться на розсилку</p>
           <form class="subscribe-form">
-            <label class="subscribe-form-wrapper">
-              <p class="label">Підпишіться на розсилку</p>
+            <!-- <label class="subscribe-form-wrapper">               -->
               <input
                 type="email"
                 class="subscribe-form-input"
                 required
                 name="user_email"
                 placeholder="E-mail"
-                lang="en"
-              />
-            </label>
+                />
+            <!-- </label> -->
             <button type="submit" class="subscribe-form-submit">
               Підписатися
               <svg class="subscribe-form-icon" width="24" height="24">
