Стилі модального вікна

--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
             <input
               type="checkbox"
               class="modal-form-checkbox visually-hidden"
-              name="user_comment"
+              name="user_agreement"
             />
 
             <svg class="modal-form-own-checkbox" width="16" height="16">
