--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
               ></use>
             </svg>
             Погоджуюся з розсилкою та приймаю&nbsp;
-            <a href=""> Умови договору</a>
+            <a href="" class="modal-form-link"> Умови договору</a>
           </label>
           <button type="submit" class="modal-form-submit">Відправити</button>
         </form>
